Added knit HTML, added test comment to rmd

--- a/lesson3/lesson3_student.rmd
+++ b/lesson3/lesson3_student.rmd
@@ -138,4 +138,7 @@ ggplot(aes(x = age), data = pf) +
   geom_histogram(binwidth = 1, fill = '#5760AB') + 
   scale_x_discrete(breaks = seq(0, 113, 5))
 ```
+```{r}
+#this is a test comment
+```
 
