--- a/lesson3/lesson3_student.rmd
+++ b/lesson3/lesson3_student.rmd
@@ -133,12 +133,30 @@ ggplot(aes(x = age), data = pf) +
   ylab('Frequency')
 ```
 ```{r}
-#instructor ggplot solution
-ggplot(aes(x = age), data = pf) + 
-  geom_histogram(binwidth = 1, fill = '#5760AB') + 
-  scale_x_discrete(breaks = seq(0, 113, 5))
+#install.packages('gridExtra') 
+library(gridExtra) 
 ```
+
 ```{r}
-#this is a test comment
+#create 1 column with 3 histograms: friend count, log10 friend count, sqrt friend #count
+
+p1 = ggplot(aes(x = friend_count), data = pf) + 
+  geom_histogram(binwidth = 25, fill = '#F79420') + 
+  scale_x_continuous(limits = c(0, 1000), breaks = seq(0, 1000, 50))
+
+p2 = ggplot(aes(x = friend_count), data = pf) + 
+  geom_histogram(fill = '#F79420') + 
+  scale_x_log10() +
+  xlab('log10(friend_count)')
+
+p3 = ggplot(aes(x = friend_count), data = pf) + 
+  geom_histogram(fill = '#F79420') + 
+  scale_x_sqrt() +
+  xlab('sqrt(friend_count)')
+
+
+# arrange plots in grid
+grid.arrange(p1, p2, p3, ncol=1)
 ```
+
 
