--- a/lesson3/lesson3_student.rmd
+++ b/lesson3/lesson3_student.rmd
@@ -293,3 +293,37 @@ by(pf$friendships_initiated,pf$gender,summary)
 ```
 **And the females have it ladies and gentlemen!**
 
+##What percent of users check in using mobile (binary analysis)?##
+
+```{r}
+summary(pf$mobile_likes)
+```
+**wow, a lot of zeros**
+
+```{r}
+summary(pf$mobile_likes > 0)
+```
+**much better**
+
+```{r}
+#assign new column to NA
+pf$mobile_check_in <- NA
+#use if else statement to alter values base on mobile likes, if they did a mobile like, they use mobile, if not, probably not.  So if mobile likes are gt 0, then assing one, else assign o.  This is just like excel syntax FYI.
+pf$mobile_check_in <-ifelse(pf$mobile_likes > 0,1,0)
+#set factor levels
+pf$mobile_check_in <- factor(pf$mobile_check_in)
+#summarize the data
+summary(pf$mobile_check_in)
+```
+####Now how about that %###
+
+```{r}
+#divide the summarry by the length of the vector then multiply by 100
+summary(pf$mobile_check_in)/length(pf$mobile_check_in) *100
+```
+**I could have answere this more specfically for the True (value = 1) case**
+
+```{r}
+sum(pf$mobile_check_in == 1)/length(pf$mobile_check_in) *100
+```
+
