--- a/lesson4/lesson4_mynotes.Rmd
+++ b/lesson4/lesson4_mynotes.Rmd
@@ -2,6 +2,7 @@
 title: "lesson4_mynotes"
 output: html_document
 ---
+**I realized this is actually work for problem set 3, I'm going to stop working on this and reopen code and markdown in the lesson 3 folder.
 
 #GGPlot2 Diamonds Data Set##
 
@@ -31,4 +32,5 @@ Which is best, let's look at the included documentation.
 ?diamonds
 ```
 colour. diamond colour, from J (worst) to D (best).  So, D is the best.
+
 
