--- a/lesson3/problemSet3.rmd
+++ b/lesson3/problemSet3.rmd
@@ -97,7 +97,8 @@ ggplot(aes(x = price), data = diamonds) +
   geom_histogram(binwidth = 25,  color = 'black',fill = '#F79420') +
   scale_x_continuous(limits = c(500, 1000), breaks = seq(500, 1000, 25))
 ```
-The last one is too granular.  600 to 800 USD seems to be the sweet spot for low end diamond prices.
+
+The last one is too granular.  600 to 800 USD seems to be the sweet spot for low end diamond prices.  
 
 **Insight provide from the class:**
 
@@ -131,5 +132,128 @@ ggplot(aes(x = price), data = diamonds) +
   geom_histogram(binwidth = 10,  color = 'black',fill = '#F79420') +
   scale_x_continuous(limits = c(1400, 1600), breaks = seq(1400, 1600, 10))
 ```
+
 Yeah, there is a large discontinuity.
+
+
+##Break out the Histogram Diamond Prices by Cut##
+
+I could use a grid to do this, but I'm going to start by trying a facet wrap.
+
+```{r}
+ggplot(aes(x = price), data = diamonds) + 
+  geom_histogram(binwidth = 100,  color = 'black',fill = '#F79420') +
+  facet_wrap(~cut,ncol = 1)
+```
+Data is long-tailed, transforming onto log scale
+
+```{r}
+ggplot(aes(x = price), data = diamonds) + 
+  geom_histogram(binwidth = .05,  color = 'black',fill = '#F79420') + 
+  scale_x_log10()+
+  xlab('Log10(price)') +
+  facet_wrap(~cut,ncol = 1)
+```
+
+The distributions have similiar shapes, the most different is the fair cut.
+
+##Basic Price Information by Cut##
+```{r}
+by(diamonds$price,diamonds$cut,max)
+by(diamonds$price,diamonds$cut,min)
+by(diamonds$price,diamonds$cut,median)
+```
+##Free Scales##
+
+```{r}
+# In the two last exercises, we looked at
+# the distribution for diamonds by cut.
+
+# Run the code below in R Studio to generate
+# the histogram as a reminder.
+
+# ===============================================================
+
+qplot(x = price, data = diamonds) + facet_wrap(~cut)
+
+
+
+                                                                               
+# ===============================================================
+
+# In the last exercise, we looked at the summary statistics
+# for diamond price by cut. If we look at the output table, the
+# the median and quartiles are reasonably close to each other.
+
+# diamonds$cut: Fair
+#    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+#     337    2050    3282    4359    5206   18570 
+# ------------------------------------------------------------------------ 
+# diamonds$cut: Good
+#    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+#     327    1145    3050    3929    5028   18790 
+# ------------------------------------------------------------------------ 
+# diamonds$cut: Very Good
+#    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+#     336     912    2648    3982    5373   18820 
+# ------------------------------------------------------------------------ 
+# diamonds$cut: Premium
+#    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+#     326    1046    3185    4584    6296   18820 
+# ------------------------------------------------------------------------ 
+# diamonds$cut: Ideal
+#    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+#     326     878    1810    3458    4678   18810 
+
+# This means the distributions should be somewhat similar,
+# but the histograms we created don't show that.
+
+# The 'Fair' and 'Good' diamonds appear to have 
+# different distributions compared to the better
+# cut diamonds. They seem somewhat uniform
+# on the left with long tails on the right.
+
+# Let's look in to this more.
+
+# Look up the documentation for facet_wrap in R Studio.
+# Then, scroll back up and add a parameter to facet_wrap so that
+# the y-axis in the histograms is not fixed. You want the y-axis to
+# be different for each histogram.
+
+# If you want a hint, check out the Instructor Notes.
+```
+
+```{r}
+ggplot(aes(x = price), data = diamonds) + 
+  geom_histogram(binwidth = 100,  color = 'black',fill = '#F79420') +
+  facet_wrap(~cut,ncol = 1, scales = 'free')
+```
+
+
+```{r}
+ggplot(aes(x = price), data = diamonds) + 
+  geom_histogram(binwidth = .05,  color = 'black',fill = '#F79420') + 
+  scale_x_log10()+
+  xlab('Log10(price)') +
+  facet_wrap(~cut,ncol = 1, scales = 'free')
+```
+
+Now what we visualize is mathing up with what we know about the data (similiar distributions)
+
+##Histogram of Price per Carat Faceted by Cut##
+
+```{r}
+ggplot(aes(x = price/carat), data = diamonds) + 
+  geom_histogram(binwidth = 100,  color = 'black',fill = '#F79420') +
+  facet_wrap(~cut,ncol = 1, scales = 'free')
+```
+
+
+```{r}
+ggplot(aes(x = price), data = diamonds) + 
+  geom_histogram(binwidth = .05,  color = 'black',fill = '#F79420') + 
+  scale_x_log10()+
+  xlab('Log10(price/carat)') +
+  facet_wrap(~cut,ncol = 1, scales = 'free')
+```
 
