--- a/lesson3/GapMinderWorkingHoursReshape.ipynb
+++ b/lesson3/GapMinderWorkingHoursReshape.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:12b6717c8fcb1f82d5928ccb5b5228091e93eeb1d970264f7af8a8899b6001f4"
+  "signature": "sha256:5a0771e777c75af6a0ec3d5de4e369272e270185bbb5d6e8edf21031baf05439"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -189,7 +189,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 2,
        "text": [
         "  Working hours per week       1980       1981       1982       1983  \\\n",
         "0              Argentina        NaN        NaN        NaN        NaN   \n",
@@ -223,7 +223,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -396,7 +396,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 3,
        "text": [
         "      country       1980       1981       1982       1983       1984  \\\n",
         "0   Argentina        NaN        NaN        NaN        NaN        NaN   \n",
@@ -430,7 +430,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -625,7 +625,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 4,
        "text": [
         "                 1980       1981       1982       1983       1984       1985  \\\n",
         "country                                                                        \n",
@@ -663,7 +663,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -834,7 +834,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 5,
        "text": [
         "country  Argentina  Australia  Austria  Bangladesh    Belgium  Brazil  \\\n",
         "1980           NaN  34.578846      NaN         NaN        NaN     NaN   \n",
@@ -868,7 +868,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -1039,7 +1039,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 6,
        "text": [
         "country  Argentina  Australia    Austria  Bangladesh    Belgium     Brazil  \\\n",
         "1980          37.5  34.578846  31.696731       44.25  32.012308  33.615385   \n",
@@ -1073,7 +1073,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -1268,7 +1268,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 7,
        "text": [
         "                 1980       1981       1982       1983       1984       1985  \\\n",
         "country                                                                        \n",
@@ -1306,15 +1306,15 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#now reset the index back to the old index\n",
-      "clean = clean.reset_index()\n",
-      "clean.head()"
+      "clean_reset = clean.reset_index()\n",
+      "clean_reset.head()"
      ],
      "language": "python",
      "metadata": {},
@@ -1477,7 +1477,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 8,
        "text": [
         "      country       1980       1981       1982       1983       1984  \\\n",
         "0   Argentina  37.500000  37.500000  37.500000  37.500000  37.500000   \n",
@@ -1511,14 +1511,14 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#switch from wide to long using melt\n",
-      "melt = pd.melt(clean, id_vars= ['country'], var_name= 'year')\n",
+      "melt = pd.melt(clean_reset, id_vars= ['country'], var_name= 'year')\n",
       "melt.head()"
      ],
      "language": "python",
@@ -1573,7 +1573,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 9,
        "text": [
         "      country  year      value\n",
         "0   Argentina  1980  37.500000\n",
@@ -1584,7 +1584,27 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "melt.to_csv('workinghours.csv')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
     }
    ],
    "metadata": {}
