--- a/lesson3/investigatingGapMinderData.Rmd
+++ b/lesson3/investigatingGapMinderData.Rmd
@@ -2,6 +2,7 @@
 title: "Exploring GapMinder Data"
 output: html_document
 ---
+setwd("~/Udacity/dataAnalysisR/EDA_R_Udacity/lesson3")
 
 #Investigating gapminder data#
 
@@ -91,7 +92,7 @@ ggplot(aes(x = value), data = workhours) +
 
 ```
 
-For the years measured no country worked 41.5 to 42.5 hours.  It looks like no country worked below 25.5 or above 56.5 hours or the years given.  The largest bin is 37.5 - 38 hours.  The bulk of the data lies between 31.5 and 40 hours.  This all makes sense given the traditional 40 hour work-week in many nations.
+For the years measured (1980 - 2007) no country worked 41.5 to 42.5 hours.  It looks like no country worked below 25.5 or above 56.5 hours or the years given.  The largest bin is 37.5 - 38 hours.  The bulk of the data lies between 31.5 and 40 hours.  This all makes sense given the traditional 40 hour work-week in many nations.
 
 
 ```{r}
@@ -101,18 +102,16 @@ ggplot(aes(x = value), data = workhours) +
   scale_x_continuous(limits = c(25, 57), breaks = seq(25, 57, 1)) +
   facet_wrap(~country, ncol = 1, scales = 'free')
 ```
-Wow that is a lot of countries and the figure is not looking so good.  What I'm really interested in is seeing what countries are over and under ranges 31.5 and 42 hours.  I'm going to subset the data and plot just those countries.
+Wow that is a lot of plots and the figure is not looking so good.  What I'm really interested in is seeing what countries are over and under ranges 31.5 and 42 hours.  I'm going to subset the data and plot just those countries.
 
 ##Subset Data##
 
 ```{r}
-lower = subset(workhours,value < 31.5)
+lower = subset(workhours,value < 30)
 upper = subset(workhours,value >42 )
 ```
+Still a lot of plots.
 
-```{r}
-summary(workhours)
-```
 
 I think I want to know who works 50 hours or more.
 
@@ -127,4 +126,98 @@ ggplot(aes(x = value), data = over50) +
   facet_wrap(~country, ncol = 1, scales = 'free')
 ```
 
-Ah, now I see why so many observation, it is taking each row.  I need to work on this a bit.
+So it is just Korea, the above is the plot of all 18 years.  I need to break the set into country and years.  
+
+
+**Breaking into years and country:**
+
+```{r}
+yearsmin = by(workhours$value, workhours$year, min)
+yearsmin
+yearsmax = by(workhours$value, workhours$year,max)
+yearsmax
+
+
+```{r}
+ggplot(aes(x = value), data = subset(workhours, year <=1985) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(25, 57), breaks = seq(25, 57, 1)) +
+  facet_wrap(~year, ncol = 1, scales = 'free')
+```
+
+```{r}
+ggplot(aes(x = value), data = subset(workhours, year == 1985 | year == 2007) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(25, 57), breaks = seq(25, 57, 1)) +
+  facet_wrap(~year, ncol = 1, scales = 'free')
+```
+
+```{r}
+ggplot(aes(x = value), data = subset(workhours, year >2001) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(25, 57), breaks = seq(25, 57, 1)) +
+  facet_wrap(~year, ncol = 1, scales = 'free')
+```
+
+```{r}
+ggplot(aes(x = value), data = subset(workhours, country == 'Korea, Rep.' & year > 2000) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(25, 57), breaks = seq(25, 57, 1)) +
+  facet_wrap(~year, ncol = 1, scales = 'free')
+```
+
+```{r}
+ggplot(aes(x = value), data = subset(upper, year >2001) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(25, 57), breaks = seq(25, 57, 1)) +
+  facet_wrap(~country, ncol = 1, scales = 'free')
+```
+```{r}
+ggplot(aes(x = value), data = subset(lower, year >2001) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(25, 57), breaks = seq(25, 57, 1)) +
+  facet_wrap(~country, ncol = 1, scales = 'free')
+```
+
+Compare to US:
+
+```{r}
+upperandUS = subset(workhours,value  >42 | country == 'United States')
+lowerandUS = subset(workhours,value  <30 | country == 'United States')
+```
+
+
+
+```{r}
+ggplot(aes(x = value), data = subset(upperandUS, year >2001) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(33, 55), breaks = seq(33, 55, 1)) +
+  facet_wrap(~country, ncol = 1, scales = 'free')
+```
+```{r}
+ggplot(aes(x = value), data = subset(lowerandUS, year >2001) ) + 
+  geom_histogram(binwidth = .5,  color = 'black',fill = '#F79420') +
+  xlab('hours') +
+  scale_x_continuous(limits = c(25, 38), breaks = seq(25, 38 , 1)) +
+  facet_wrap(~country, ncol = 1, scales = 'free')
+```
+
+**Now Let's Try Box Plots**
+
+```{r}
+qplot(x = country, y = value,data = upperandUS,geom = 'boxplot') +
+  coord_cartesian(ylim=c(33,58))
+```
+
+```{r}
+qplot(x = country, y = value,data = lowerandUS,geom = 'boxplot') +
+  coord_cartesian(ylim=c(24,39))
+```
+
