90% through lesson 4, used dplyr to create dataframe, created bar plots with category based fill.

--- a/lesson4/lesson4_student.rmd
+++ b/lesson4/lesson4_student.rmd
@@ -416,7 +416,7 @@ pf.fc_by_age_months <- pf %>%
             n = n()) %>%
   arrange(age_with_months)
 
-head(pf.fc_by_age_months,20)
+diamondsByClarity
 ```
 
 ***
