--- a/lesson4/lesson4_problemset.Rmd
+++ b/lesson4/lesson4_problemset.Rmd
@@ -13,6 +13,7 @@ library(ggplot2)
 library(gridExtra)
 library(dplyr)
 library('alr3')
+library(dplyr)
 getwd()
 list.files()
 data(diamonds)
@@ -68,5 +69,55 @@ cor.test(volume_subset$volume, volume_subset$price)
 ggplot(aes(x = volume, y = price), data = volume_subset) +
   geom_point(color = 'green') +
   geom_smooth()
+```
+
+```{r mean price by clarity}
+# Use the function dplyr package
+# to create a new data frame containing
+# info on diamonds by clarity.
+
+# Name the data frame diamondsByClarity
+
+# The data frame should contain the following
+# variables in this order.
+
+#       (1) mean_price
+#       (2) median_price
+#       (3) min_price
+#       (4) max_price
+#       (5) n
+
+# where n is the number of diamonds in each
+# level of clarity.
+
+diamondsByClarity <- diamonds %>%
+  group_by(clarity) %>%
+  summarise(mean_price = mean(price),
+            median_price = median(as.numeric(price)),#necessary due to bug in version 0.4.1 yesterday (2015-01-14)
+            min_price = min(price),
+            max_price = max(price),
+            n = n()) %>%
+  arrange(clarity)
+
+diamondsByClarity
+
+```
+
+```{r two bar plots}
+#create data sets
+diamonds_by_clarity <- group_by(diamonds, clarity)
+diamonds_mp_by_clarity <- summarise(diamonds_by_clarity, mean_price = mean(price))
+
+diamonds_by_color <- group_by(diamonds, color)
+diamonds_mp_by_color <- summarise(diamonds_by_color, mean_price = mean(price))
+
+#create plots
+p1 = ggplot(aes(x = clarity, y = price), data = diamonds) +
+  geom_bar(stat = 'identity', aes(fill = clarity))
+
+p2 = ggplot(aes(x = color, y = price), data = diamonds) +
+  geom_bar(stat = 'identity', aes(fill = color))
+
+grid.arrange(p1,p2,ncol = 1)
 ```
 
