--- a/lesson5/lesson5_student.rmd
+++ b/lesson5/lesson5_student.rmd
@@ -1,6 +1,23 @@
 Lesson 5
 ========================================================
 
+###Load dependencies, data, and set path###
+
+```{r libraries and path}
+setwd("~/Udacity/dataAnalysisR/EDA_R_Udacity/lesson5")
+getwd()
+list.files()
+
+library(ggplot2)
+library(gridExtra)
+library(dplyr)
+library('alr3')
+
+pf <- read.csv("~/Udacity/dataAnalysisR/EDA_R_Udacity/lesson3/pseudo_facebook.tsv", sep = '\t')
+names(pf)
+
+```
+
 ### Multivariate Data
 Notes:
 
@@ -16,38 +33,122 @@ Notes:
 
 ```{r Third Qualitative Variable}
 ggplot(aes(x = gender, y = age),
-       data = subset(pf, !is.na(gender))) + geom_histogram()
+       data = subset(pf, !is.na(gender))) + geom_boxplot()
+
+ggplot(aes(x = gender, y = age),
+       data = subset(pf, !is.na(gender))) + geom_histogram(binwidth = .5,stat = 'identity')
+
+# Write code to create a new data frame,
+# called 'pf.fc_by_age_gender', that contains
+# information on each age AND gender group.
+
+# The data frame should contain the following variables:
+
+#    mean_friend_count,
+#    median_friend_count,
+#    n (the number of users in each age and gender grouping)
+
+# Here is an example of the structure of your data frame. Your
+# data values will be different.
+
+#   age gender mean_friend_count median_friend_count    n
+# 1  13 female          247.2953                 150  207
+# 2  13   male          184.2342                  61  265
+# 3  14 female          329.1938                 245  834
+# 4  14   male          157.1204                  88 1201
+
+# See the Instructor Note for two hints.
+
+# DO NOT DELETE THESE NEXT TWO LINES OF CODE
+# ==============================================================
+#pf <- read.delim('/datasets/ud651/pseudo_facebook.tsv')
+#suppressMessages(library(dplyr))
+
+# ENTER YOUR CODE BELOW THIS LINE.
+# ==============================================================
+
+pf.fc_by_age_gender <- pf %>%
+  group_by(age, gender) %>%
+  filter(!is.na(gender))%>%
+  summarise(mean_friend_count = mean(friend_count),
+            median_friend_count = median(as.numeric(friend_count)),
+            n = n()) %>%
+  ungroup() %>% #summarise removes one layer of grouping the last group it collapsed, in this case gender, use ungroup(age) to remove grouping by age
+  arrange(age)
+
+head(pf.fc_by_age_gender)
+
+
+
 ```
 
 ***
 
 ### Plotting Conditional Summaries
-Notes:
+Notes:  
 
 ```{r Plotting Conditional Summaries}
+# Create a line graph showing the
+# median friend count over the ages
+# for each gender. Be sure to use
+# the data frame you just created,
+# pf.fc_by_age_gender.
 
+# See the Instructor Notes for a hint.
+
+# This assignment is not graded and
+# will be marked as correct when you submit.
+
+# ENTER YOUR CODE BELOW THIS LINE
+# =================================================
+ggplot(aes(x = age, y = median_friend_count), data = pf.fc_by_age_gender) +
+  geom_line(aes(color = gender))
 ```
 
 ***
 
 ### Thinking in Ratios
-Notes:
+Notes:  Looking at the data we see that for younger users females tend to have more friends than males.  How many?  is it twice as many, 10x??  To answer this question we need to reshape the data.
 
 ***
 
 ### Wide and Long Format
-Notes:
+Notes:  The data is currently in long format.  We will need the data in wide format to conduct our analysis.  we are going to use the reshape2 package.
+
+**Instructor notes:**
+
+You can also restructure the data using the tidyr package. You can review examples and how to use the package in the Data Wrangling with R pdf.
+
+The code to change the data frame from long format to wide (or tidy format) is shown below. I encourage you to read the Data Wrangling pdf and write code using the tidyr package before looking at the solution below. 
 
 ***
 
 ### Reshaping Data
 Notes:
 
-```{r}
-install.packages('reshape2')
+```{r reshape2}
+#install.packages('reshape2')
 library(reshape2)
-```
 
+pf.fc_by_age_gender_wide <- dcast(pf.fc_by_age_gender,
+                                  age ~ gender,
+                                  value.var = 'median_friend_count')
+
+head(pf.fc_by_age_gender_wide)
+```
+Instructor Notes
+
+It's important to use quotes around the variable name that is assigned tovalue.var. 
+
+We could also create a similar data frame using the dplyr package. 
+pf.fc_by_age_gender.wide <- pf.fc_by_age_gender %.% 
+  group_by(age) %.% 
+  summarise(male = friend_count.median[gender = 'male'], 
+                      female = friend_count.median[gender = 'female'], 
+                      ratio = female / male) %.% 
+  arrange(age) 
+
+head(pf.fc_by_age_gender.wide)
 
 ***
 
@@ -55,7 +156,31 @@ library(reshape2)
 Notes:
 
 ```{r Ratio Plot}
+# Plot the ratio of the female to male median
+# friend counts using the data frame
+# pf.fc_by_age_gender.wide.
 
+# Think about what geom you should use.
+# Add a horizontal line to the plot with
+# a y intercept of 1, which will be the
+# base line. Look up the documentation
+# for geom_hline to do that. Use the parameter
+# linetype in geom_hline to make the
+# line dashed.
+
+# The linetype parameter can take the values 0-6:
+# 0 = blank, 1 = solid, 2 = dashed
+# 3 = dotted, 4 = dotdash, 5 = longdash
+# 6 = twodash
+
+# This assignment is not graded and
+# will be marked as correct when you submit.
+
+# ENTER YOUR CODE BELOW THIS LINE
+# =================================================
+ggplot(aes(x = age, y = female/male), data = pf.fc_by_age_gender_wide) +
+  geom_line() +
+  geom_hline(yintercept = 1, alpha = 0.3, linetype = 2)
 ```
 
 ***
@@ -64,16 +189,69 @@ Notes:
 Notes:
 
 ```{r Third Quantitative Variable}
+# Create a variable called year_joined
+# in the pf data frame using the variable
+# tenure and 2014 as the reference year.
+
+# The variable year joined should contain the year
+# that a user joined facebook.
+
+# See the Instructor Notes for three hints if you get
+# stuck. Scroll down slowly to see one hint at a time
+# if you would like some guidance.
+
+# This programming exercise WILL BE automatically graded.
+
+# DO NOT ALTER THE CODE BELOW THIS LINE
+# ========================================================
+#pf <- read.delim('/datasets/ud651/pseudo_facebook.tsv')
+
+# ENTER YOUR CODE BELOW THIS LINE.
+# ========================================================
 
 ```
+pf$year_joined <- floor(2014 - pf$tenure/365)
+
 
 ***
 
 ### Cut a Variable
-Notes:
+Notes:  Cut function is useful to make discrete variables from continuous or numerical variables.
+
+Cut function information : http://www.r-bloggers.com/r-function-of-the-day-cut-2/
 
 ```{r Cut a Variable}
+summary(pf$year_joined)
 
+table(pf$year_joined)
+
+# Create a new variable in the data frame
+# called year_joined.bucket by using
+# the cut function on the variable year_joined.
+
+# You need to create the following buckets for the
+# new variable, year_joined.bucket
+
+#        (2004, 2009]
+#        (2009, 2011]
+#        (2011, 2012]
+#        (2012, 2014]
+
+# Note that a parenthesis means exclude the year and a
+# bracket means include the year.
+
+# Look up the documentation for cut or try the link
+# in the Instructor Notes to accomplish this task.
+
+# DO NOT DELETE THE TWO LINES OF CODE BELOW THIS LINE
+# ========================================================================
+#pf <- read.delim('/datasets/ud651/pseudo_facebook.tsv')
+#pf$year_joined <- floor(2014 - pf$tenure / 365)
+
+# ENTER YOUR CODE BELOW THIS LINE
+# ========================================================================
+pf$year_joined.bucket <- cut(pf$year_joined, c(2004,2009,2011,2012,2014))
+table(pf$year_joined.bucket)
 ```
 
 ***
