--- a/lesson5/lesson5_student.rmd
+++ b/lesson5/lesson5_student.rmd
@@ -260,7 +260,25 @@ table(pf$year_joined.bucket)
 Notes:
 
 ```{r Plotting it All Together}
+# Create a line graph of friend_count vs. age
+# so that each year_joined.bucket is a line
+# tracking the median user friend_count across
+# age. This means you should have four different
+# lines on your plot.
 
+# You should subset the data to exclude the users
+# whose year_joined.bucket is NA.
+
+# If you need a hint, see the Instructor Notes.
+
+# This assignment is not graded and
+# will be marked as correct when you submit.
+
+# ENTER YOUR CODE BELOW THIS LINE
+# ===================================================
+ggplot(aes(x = age, y = friend_count), 
+              data = subset(pf, !is.na(pf$year_joined))) + 
+  geom_line(aes(color = year_joined.bucket), stat = 'summary', fun.y = median)
 ```
 
 ***
@@ -269,7 +287,33 @@ Notes:
 Notes:
 
 ```{r Plot the Grand Mean}
+# Write code to do the following:
 
+# (1) Add another geom_line to code below
+# to plot the grand mean of the friend count vs age.
+
+# (2) Exclude any users whose year_joined.bucket is NA.
+
+# (3) Use a different line type for the grand mean.
+
+# As a reminder, the parameter linetype can take the values 0-6:
+
+# 0 = blank, 1 = solid, 2 = dashed
+# 3 = dotted, 4 = dotdash, 5 = longdash
+# 6 = twodash
+
+# This assignment is not graded and
+# will be marked as correct when you submit.
+
+# The code from the last programming exercise should
+# be your starter code!
+
+# ENTER YOUR CODE BELOW THIS LINE
+# ==================================================================
+ggplot(aes(x = age, y = friend_count), 
+              data = subset(pf, !is.na(pf$year_joined))) + 
+  geom_line(aes(color = year_joined.bucket), stat = 'summary', fun.y = mean) +
+  geom_line(stat = 'summary',fun.y = mean, linetype = 3)
 ```
 
 ***
